2005-11-21 Simon Floery <chimaira@users.sf.net>
	* ng_view gets some basic number base and angle base functionality
	* ng_view updates menus

2005-11-21 Simon Floery <chimaira@users.sf.net>
	* ng_view gets some tuning

2005-11-19 Simon Floery <chimaira@users.sf.net>
	* ng_view gets some major improvements
	
2005-11-18 Simon Floery <chimaira@users.sf.net>
	* ng_view gets on its way

2005-11-17 Simon Floery <chimaira@users.sf.net>
	* added es_MX translation (thanks to eduardo)
	* reorganize set prefs code, seperate code into classic_view

2005-07-11 Simon Floery <chimaira@users.sf.net>
	* updated German translation (thanks to Jens)
	* added Slovakian translation (thanks to Peter)

2005-07-08 Simon Floery <chimaira@users.sf.net>
	* gcc4 compatibility

2005-05-10 Simon Floery <chimaira@users.sf.net>
	* configure.in: added libtool to build process
	* src/*.[ch]: 2004 replaced by 2005

########################################
# 2005-05-09 galculator 1.2.5 released #
########################################

2005-05-06 Simon Floery <chimaira@users.sf.net>
	* ui/scientific_buttons.glade: hex buttons with shift modifiers

2005-05-05 Simon Floery <chimaira@users.sf.net>
	* src/Makefile.am: added galculator_LDFLAGS = -export-dynamic
		(thanks to Jim)

2004-11-09 Simon Floery <chimaira@users.sf.net>
	* configure.in: removed perl XML::Parser dependancy (thanks to
		Christian)

2004-11-07 Simon Floery <chimaira@users.sf.net>
	* callbacks.c: on_paste_activate CTRL-V in formula entry (small bugfix)
	* updated ja.po

2004-10-22 Simon Floery <chimaira@users.sf.net>
	* general_functions.c: lower_bin_string in axtof (small bugfix)
	* callbacks.c: on_number_button_clicked missing brackets (small bugfix)
	* callbacks.c: on_paste_activate check for NULL pointer (small bugfix)

########################################
# 2004-10-21 galculator 1.2.4 released #
########################################

2004-10-19 Simon Floery <chimaira@users.sf.net>